<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:id="@+id/tvlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/circle">

        <RelativeLayout
            android:id="@+id/imgProfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">


            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="175dp"
                android:layout_height="175dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/foto_abbiyu">

            </de.hdodenhof.circleimageview.CircleImageView>


        </RelativeLayout>

        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgProfil"
            android:layout_centerHorizontal="true"
            android:text="@string/nama"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="15sp"/>

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_nama"
            android:layout_centerHorizontal="true"
            android:text="@string/address"
            android:textSize="16sp"
            android:textColor="@color/address"
            android:fontFamily="sans-serif" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvlayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email"
                    android:textColor="@color/font"
                    android:textSize="13sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:fontFamily="sans-serif-light"
                    android:textColor="#000000"
                    android:textSize="18sp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Phone"
                    android:textColor="@color/font"
                    android:textSize="13sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:fontFamily="sans-serif-light"
                    android:textColor="#000000"
                    android:textSize="18sp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Facebook"
                    android:textColor="@color/font"
                    android:textSize="13sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/facebook"
                    android:fontFamily="sans-serif-light"
                    android:textColor="#000000"
                    android:textSize="18sp"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnLogoutMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="6dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/roundedbutton"
                android:minWidth="0dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/logout"
                android:textColor="#de101010" >

            </Button>

        </LinearLayout>




    </RelativeLayout>




</RelativeLayout>